Refatorando código e ajustando bugs

--- a/api-ceptempo-consumer/Dockerfile
+++ b/api-ceptempo-consumer/Dockerfile
@@ -6,5 +6,6 @@ RUN go build -o consumer
 FROM alpine:latest
 WORKDIR /app
 COPY --from=build /app/consumer .
+COPY --from=build /app/index.html . 
 EXPOSE 8081
 CMD ["./consumer"]
